# universe

./: .gitignore  CMakeLists.txt
documentation/: STYLE.md
projects/: CMakeLists.txt
projects/core/: CMakeLists.txt
projects/core/source/core/container/: array.cpp  array.hpp
projects/core/source/core/framework/: observer.cpp  observer.hpp  visitor.cpp  visitor.hpp
projects/core/source/core/image/: targa.cpp  targa.hpp
projects/core/source/core/math/: abs.cpp  abs.hpp  max.cpp  max.hpp  min.cpp  min.hpp  ray.cpp  ray.hpp  sqrt.cpp  sqrt.hpp  vector2.cpp  vector2.hpp  vector3.cpp  vector3.hpp
projects/core/source/core/standard/: assert.cpp  assert.hpp  type.cpp  type.hpp
projects/core/source/core/trait/: condition.cpp  condition.hpp  is_bool.cpp  is_bool.hpp  is_integral.cpp  is_integral.hpp  is_rational.cpp  is_rational.hpp  is_same.cpp  is_same.hpp  is_signed.cpp  is_signed.hpp  is_unsigned.cpp  is_unsigned.hpp  make_signed.cpp  make_signed.hpp  make_unsigned.cpp  make_unsigned.hpp  remove_reference.cpp  remove_reference.hpp  type_identity.cpp  type_identity.hpp
projects/core/source/core/utility/: binary.cpp  binary.hpp  exchange.cpp  exchange.hpp  forward.cpp  forward.hpp  memory_copy.cpp  memory_copy.hpp  move.cpp  move.hpp  swap.hpp
projects/raytrace/: CMakeLists.txt
projects/raytrace/source/raytrace/: main.cpp
projects/tools/: CMakeLists.txt
projects/tools/source/: endian_check.c
